[package]
name = "dir-manager"
version = "0.0.1" # https://crates.io/crates/dir-manager
edition = "2021"
rust-version = "1.62"
publish = true
description = "Rust random manager"
repository = "https://github.com/gyuho/dir-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
dirs = "4.0.0"

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.17"
